# complex-networks

./: pyproject.toml
data/: wars.txt
msz/: __init__.py
msz/pd01/: DK1.txt  DK3.txt  common.py  hist.py  hist_cum.py  hist_log.py  hist_prob.py  pd01.tex
msz/pd02/: graph.py  hist.py  pd02.cpp
msz/pd02/output/p/: N=100000_m=1.err  N=100000_m=2.err  N=100_m=1.err  N=100_m=2
msz/pd02/output/r/: N=100000_m=1.err  N=100_m=1  N=100_m=2
msz/pd03/: graph.py  knn.py  knn2.py  knn3.py  pd03.cpp
msz/pd03/output/p/: N=100000_m=1  N=100000_m=2  N=100_m=1  N=100_m=2.err
msz/pd03/output/r/: N=100000_m=1  N=100000_m=2  N=100000_m=2.err  N=100_m=1.err  N=100_m=2.err
msz/pd04/: er.cpp  k_compare.py  mc_evolution.py
msz/pd04/output/m/: 0.1.err  0.7.err
