[tool.poetry]
name = "msz"
version = "0.1.0"
description = ""
authors = ["davkk <dadulerk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
jupyter = "^1.0.0"
jupytext = "^1.16.1"
jupyter-collaboration = "^2.0.3"
nbconvert = "^7.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
